[tool.poetry]
name = "pypmt-eval-toolkit"
version = "0.1.0"
description = "A package to evaluate plannerswith UP interface."
authors = ["MFaisalZaki <mustafa.faisal.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
unified-planning = "^1.1.0"
pypmt = {git = "https://github.com/pyPMT/pyPMT.git"}
up_pypmt = {git = "https://github.com/pyPMT/up-pypmt.git"}
up-cpor = {git = "https://github.com/aiplan4eu/up-cpor.git"}
up-tamer = "^1.1.3"
up-enhsp = "^0.0.25"
up-symk = "^1.3.0"
up-pyperplan = "^1.1.0"
up-spiderplan = "^0.6.4"
up-fast-downward = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pypmtevalcli = 'pypmt_eval_toolkit.main:main'


